--- a/section3/word-relay.html
+++ b/section3/word-relay.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div>총 <span id="total"></span>명의 참가자가 게임을 진행합니다.</div>
   <div><span id="order">1</span>번째 참가자</div>
   <div>제시어: <span id="word"></span></div>
   <input type="text">
