--- a/section6/lotto.html
+++ b/section6/lotto.html
@@ -7,7 +7,7 @@
   <style>
     .ball{
       display: inline-block;
-      border: 1px solid black;
+      border: 1px solid rgb(70, 70, 70);
       border-radius: 20px;
       width: 40px;
       height: 40px;
@@ -15,6 +15,24 @@
       font-size: 20px;
       text-align: center;
       margin-right: 20px;
+    }
+    .ball.red{
+      background-color: red;
+      color: white;
+    }
+    .ball.orange{
+      background-color: orange;
+    }
+    .ball.yellow{
+      background-color: yellow;
+    }
+    .ball.blue{
+      background-color: blue;
+      color: white;
+    }
+    .ball.green{
+      background-color: green;
+      color: white;
     }
   </style>
   <script defer src="./main.js"></script>
