docs: Oranized the code
- 코드를 정리하였습니다.
- style부분에 line-height를 추가하여 요소가 추가될때 움직이지 않도록
  하였습니다.

--- a/section6/lotto.html
+++ b/section6/lotto.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    #bonus, #result{
+      line-height: 50px;
+    }
     .ball{
       display: inline-block;
       border: 1px solid rgb(70, 70, 70);
@@ -39,7 +42,7 @@
   <title>로또 추첨기</title>
 </head>
 <body>
-  <div id="result">추첨 결과는?</div>
-  <div id="bonus">보너스</div>
+  <div id="result">추첨 결과는? </div>
+  <div id="bonus">보너스 </div>
 </body>
 </html>
