--- a/section8/response-check.html
+++ b/section8/response-check.html
@@ -19,6 +19,12 @@
     #screen.now{
       background-color: green;
     }
+    ul{
+      display: none;
+    }
+    ul.active{
+      display: block;
+    }
   </style>
   <title>반응속도</title>
   <script defer src="main.js"></script>
@@ -26,5 +32,7 @@
 <body>
   <div id="screen" class="waiting">클릭해서 시작하세요</div>
   <div id="result"></div>
+  <ul>
+  </ul>
 </body>
 </html>
