feat: Clear Mission
- 목숨을 구현했습니다.

--- a/section14/whack-a-mole.html
+++ b/section14/whack-a-mole.html
@@ -66,6 +66,7 @@
   <body>
     <div>
       <span id="timer">60</span>초&nbsp; <span id="score">0</span>점
+      <span>목숨: <span id="life">3</span></span>
       <button id="start">시작</button>
     </div>
     <div id="game">
